# src/muzyaka/docs/swagger.json
@@ -632,6 +632,82 @@
                 }
             }
         },
+        "/api/merch": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "find merch",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "merch"
+                ],
+                "summary": "FindMerch",
+                "operationId": "find-merch",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name search by q",
+                        "name": "q",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "number of page from 1",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "size of page",
+                        "name": "page_size",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.MerchCollection"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/merch/{id}": {
             "get": {
                 "security": [
@@ -3043,10 +3119,6 @@
                         "type": "integer"
                     }
                 },
-                "payload_size": {
-                    "description": "TODO: mb удалить PayloadSize",
-                    "type": "integer"
-                },
                 "source": {
                     "type": "string"
                 }
@@ -3066,9 +3138,6 @@
                     "items": {
                         "type": "integer"
                     }
-                },
-                "payload_size": {
-                    "type": "integer"
                 }
             }
         },
